[tool.poetry]
name = "service-access-management"
version = "0.1.0"
description = ""
authors = ["Artem Sliusarenko <sliusarenko.artem@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
